# Sublimation

./: .clang-format  .gitmodules  CMakeLists.txt
src/: main.cpp
src/core/: engine.cpp  engine.h
src/graphics/: render_system.cpp  render_system.h
src/graphics/shaders/: depth.vert.glsl  forward.frag.glsl  forward.vert.glsl
src/graphics/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor.cpp  descriptor.h  pipeline.h  render_target.cpp  render_target.h  rendering_device.cpp  rendering_device.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.cpp  utils.h  vulkan_context.cpp  vulkan_context.h
src/scene/: camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  scene.cpp  scene.h
